get & put instead of compute; FMT instead of format